0028193: missing "Standard_EXPORT"

missing "Standard_EXPORT" for "SetFuzzyValue" and "FuzzyValue" in IntTools_FaceFace was added